--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -34,16 +34,32 @@ input[type="number"]::-webkit-outer-spin-button {
 
 select {
   width: 100%;
-  padding: 0.60rem 0.3rem;        
-  font-size: 0.875rem;             
-  border: 1px solid #000;      
-  border-radius: 0.300rem;         
-  background-color: #fff;         
+  padding: 8px 37px 8px 10px; 
+  font-size: 0.875rem;
+  border: 1px solid #000;
+  border-radius: 0.3rem;
+  background-color: #fff;
   transition: border-color 0.2s, box-shadow 0.2s;
+
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  cursor: pointer;
+  position: relative;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='16' viewBox='0 0 24 24' width='16' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/></svg>");
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 16px;
 }
 
 select:focus {
   outline: none;
-  border-color: #6366f1;          
-  box-shadow: 0 0 0 2px rgba(199, 210, 254, 0.5); 
+  border-color: #6366f1;
+  box-shadow: 0 0 0 2px rgba(199, 210, 254, 0.5);
+}
+
+option {
+  background-color: white;
+  color: black;
+  border: 2px solid white;
 }
