--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -15,7 +15,7 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 4px;
   height: 4px;
 }
@@ -30,7 +30,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(0, 0, 0, 0.5);
-}
+} */
 
 select {
   width: 100%;
