--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -32,6 +32,18 @@ input[type="number"]::-webkit-outer-spin-button {
   background-color: rgba(0, 0, 0, 0.5);
 } */
 
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  scrollbar-width: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+}
+
 select {
   width: 100%;
   padding: 8px 37px 8px 10px; 
